tests/compile_fail/round_on_l_conn.stderr
error[E0277]: the trait bound `Conn<i32, i32>: Triple<_, _>` is not satisfied
  --> tests/compile_fail/round_on_l_conn.rs:11:24
   |
11 |     let _: i32 = round(&L_CONN, 0_i32);
   |                  ----- ^^^^^^^ the trait `ViewL<_, _>` is not implemented for `Conn<i32, i32>`
   |                  |
   |                  required by a bound introduced by this call
   |
   = help: the following other types implement trait `ViewL<A, B>`:
             `DURNSECS` implements `ViewL<time::duration::Duration, Extended<i64>>`
             `F064F032` implements `ViewL<ExtendedFloat<f64>, ExtendedFloat<f32>>`
             `I008I016` implements `ViewL<Extended<i8>, i16>`
             `I008I032` implements `ViewL<Extended<i8>, i32>`
             `I008I064` implements `ViewL<Extended<i8>, i64>`
             `I008I128` implements `ViewL<Extended<i8>, i128>`
             `I008N008` implements `ViewL<i8, NonZero<i8>>`
             `I016I032` implements `ViewL<Extended<i16>, i32>`
           and $N others
   = note: required for `Conn<i32, i32>` to implement `Triple<_, _>`
note: required by a bound in `connections::round`
  --> src/conn.rs
   |
   | pub fn round<T, A, B>(t: &T, x: A) -> B
   |        ----- required by a bound in this function
   | where
   |     T: Triple<A, B>,
   |        ^^^^^^^^^^^^ required by this bound in `round`

error[E0277]: the trait bound `Conn<i32, i32>: Triple<_, _>` is not satisfied
  --> tests/compile_fail/round_on_l_conn.rs:11:24
   |
11 |     let _: i32 = round(&L_CONN, 0_i32);
   |                  ----- ^^^^^^^ the trait `ViewR<_, _>` is not implemented for `Conn<i32, i32>`
   |                  |
   |                  required by a bound introduced by this call
   |
   = help: the following other types implement trait `ViewR<A, B>`:
             `DURNSECS` implements `ViewR<time::duration::Duration, Extended<i64>>`
             `F064F032` implements `ViewR<ExtendedFloat<f64>, ExtendedFloat<f32>>`
             `I008N008` implements `ViewR<i8, NonZero<i8>>`
             `I016N016` implements `ViewR<i16, NonZero<i16>>`
             `I032N032` implements `ViewR<i32, NonZero<i32>>`
             `I064N064` implements `ViewR<i64, NonZero<i64>>`
             `I128N128` implements `ViewR<i128, NonZero<i128>>`
             `IPV6IPV4` implements `ViewR<Ipv6Addr, Extended<Ipv4Addr>>`
           and $N others
   = note: required for `Conn<i32, i32>` to implement `Triple<_, _>`
note: required by a bound in `connections::round`
  --> src/conn.rs
   |
   | pub fn round<T, A, B>(t: &T, x: A) -> B
   |        ----- required by a bound in this function
   | where
   |     T: Triple<A, B>,
   |        ^^^^^^^^^^^^ required by this bound in `round`
